# hannover

./: Cargo.toml  readme.txt
docs/: melody.txt  notes.txt  wtvm.txt
src/: aio.rs  bytes.rs  data.rs  delay.rs  envelope.rs  float.rs  gui.rs  main.rs  markov.rs  math.rs  melody.rs  notes.rs  performer.rs  player.rs  sampler.rs  sequence.rs  source.rs  wavetable.rs
src/gui/: mod.rs  poll.rs
src/notes/: duration.rs  mod.rs  pitch.rs
src/structures/: fixed_queue.rs  mod.rs
src/voice/: group.rs  mod.rs
