[package]
name = "hannover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cpal = "0.14.2"
crossterm = "0.25.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rtrb = "0.2.3"
single_value_channel = "1.2.2"
